[hw8] update Users api
