# hw8__swagger_generated/api/swagger/swagger.yaml
@@ -253,7 +253,9 @@ definitions:
         items:
           properties:
             _id:
-              type: string
+              type: number
+            userId:
+              type: number
             username:
               type: string
             email:
@@ -262,6 +264,9 @@ definitions:
               type: string
             passwordHash:
               type: string
+            lastModifiedDate:
+              type: string
+              
   DeletedResponse:
     required:
       - status
